@@ -2,6 +2,7 @@
 6.04  2015-03-22
   - Improved Mojo::Reactor::EV and Mojo::Reactor::Poll to fail more
     consistently.
+  - Improved Mojo::Base performance slightly.
   - Fixed a few bugs in Mojo::DOM::CSS that required class, id and attribute
     selectors, as well as pseudo-classes, to be in a specific order.
 
